# lizual

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  lizual.sln
assets/: config.txt
assets/shaders/: default.frag  default.vert
dependencies/GLAD/: CMakeLists.txt
dependencies/GLAD/include/glad/: gl.h
dependencies/GLFW/lib/: glfw3.lib
dependencies/glm/: CMakeLists.txt
dependencies/stb_image/: CMakeLists.txt  README.md
lizual/: lizual.ruleset  lizual.vcxproj  lizual.vcxproj.filters
lizual/docs/: references.md
lizual/res/shaders/: Basic.shader
lizual/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  config.cpp  config.h  main.cpp
src/shaders/: default.frag
